changing about section title padding to fix white space

--- a/styles.css
+++ b/styles.css
@@ -394,11 +394,6 @@ body {
 }
 
 @media only screen and (max-width: 475px) {
-  #header {
-    width: 100%;
-    height: 70vh;
-  }
-
   #about {
     padding-top: 25px;
   }
